terraform/stage/alb.tf
resource "aws_lb" "default" {
  name            = "pokedex-lb"
  subnets         = aws_subnet.public.*.id
  security_groups = [aws_security_group.lb_sg.id]
}

resource "aws_lb_target_group" "pokedex_tg" {
  name        = "pokedex-target-group"
  port        = 80
  protocol    = "HTTP"
  vpc_id      = aws_vpc.default.id
  target_type = "ip"
}

resource "aws_lb_listener" "pokedex_lb_listener" {
  load_balancer_arn = aws_lb.default.id
  port              = "80"
  protocol          = "HTTP"

  default_action {
    target_group_arn = aws_lb_target_group.pokedex_tg.id
    type             = "forward"
  }
}
